--- a/components/Images/Images.module.scss
+++ b/components/Images/Images.module.scss
@@ -94,6 +94,11 @@
             border-radius: 20px;
         }
 
+        @media screen and (max-width: 600px) {
+            width: 250px;
+            height: 250px;
+        }
+
         .cross {
             position: absolute;
             right: -20px;
