--- a/components/Images/Images.module.scss
+++ b/components/Images/Images.module.scss
@@ -18,6 +18,7 @@
             0 0 3px rgba(0, 0, 0, 0.5);
         cursor: pointer;
         position: relative;
+        user-select: none;
 
         .imageWrapper {
             position: absolute;
@@ -68,6 +69,7 @@
     overflow: auto;
     pointer-events: none;
     transition: 0.3s all;
+    user-select: none;
 
     &::after {
         content: '';
@@ -89,6 +91,7 @@
         position: relative;
         box-shadow: 0 0 20px rgba(255, 255, 255, 0.4),
             0 0 0 3px rgba(255, 255, 255);
+            user-select: none;
 
         img {
             border-radius: 20px;
