Fixed select on imageInfo

--- a/components/Images/Images.module.scss
+++ b/components/Images/Images.module.scss
@@ -118,6 +118,8 @@
             bottom: -30px;
             left: 10px;
             color: rgb(205, 204, 204);
+            -webkit-tap-highlight-color: darkturquoise;
+
         }
 
         i {
