--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -8,6 +8,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: auto;
 
     .developer {
         font-size: 17px;
